[package]
name = "cmd-drawer"
version = "0.1.0"
edition = "2021"
authors = ["Cassin01"]
license = "MIT OR Apache-2.0"
description = "A drawer for put away your complecx commands"
readme = "README.md"
homepage = "https://github.com/Cassin01/cmd-drawer"
repository = "https://github.com/Casin01/cmd-drawer"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
dialoguer = {version="0.10.2", features = ["fuzzy-select"]}
confy = "0.5.0"
serde_derive = "1.0.144"
serde = { version = "1.0", features = ["derive"] }
